cmake_minimum_required(VERSION 4.0)
project(week4_lab1)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(week4_lab1
        problem1.cpp
        problem10.cpp
        problem11.cpp
        problem12.cpp
        problem2.cpp
        problem3.cpp
        problem4.cpp
        problem5.cpp
        problem6.cpp
        problem7.cpp
        problem8.cpp
        problem9.cpp)
